--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     padding: 0;
     background: #f5f6fa;
   }
+.header-img {
+  width: 100%;
+  max-width: 480px;  /* ukuran ideal */
+  height: auto;
+  margin: 0 auto 14px auto;
+  display: block;
+}
 
   header {
     background: #0b74de;
@@ -147,7 +154,7 @@
 <body>
 
 <header>
-  <img id="headerImage" src="" style="max-width:160px; margin-bottom:10px;">
+  <img id="headerImage" class="header-img" src="">
   <div style="font-size:22px; font-weight:600;">Aplikasi Buku Kas Gereja</div>
   <div id="headerSubyek" style="font-size:16px; margin-top:4px; opacity:0.9;"></div>
 </header>
