--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 <header>
   <img id="headerImage" class="header-img" src="">
-  <div style="font-size:22px; font-weight:600;">Aplikasi Buku Kas Gereja</div>
+  <div style="font-size:22px; font-weight:600;">Aplikasi Buku Kas Umum</div>
   <div id="headerSubyek" style="font-size:16px; margin-top:4px; opacity:0.9;"></div>
 </header>
 
