--- a/index.html
+++ b/index.html
@@ -93,6 +93,28 @@ th { background:#eef6ff; font-weight:600; }
 .btn-print:hover {
   background: #085ab4;
 }
+.btn-edit {
+  background:#0b74de;
+  color:white;
+  padding:6px 10px;
+  border:none;
+  border-radius:6px;
+  margin-right:6px;
+  cursor:pointer;
+}
+
+.btn-danger {
+  background:#c0392b;
+  color:white;
+  padding:6px 10px;
+  border:none;
+  border-radius:6px;
+  cursor:pointer;
+}
+
+.no-print {
+  display:inline-block;
+}
 
 /* ========================= PRINT CLEAN & FINAL ========================= */
 
